- Add example for loop with zip filter - Add explanation alongside loop with zip filter

--- a/dict2items/demo.yml
+++ b/dict2items/demo.yml
@@ -1,4 +1,4 @@
-- name: demonstrate loop with subelements
+- name: demonstrate loop with dictitems/dictsort
   hosts: localhost
   gather_facts: no
 
