- Update gather_facts to shut the linter up.

--- a/dict2items/demo.yml
+++ b/dict2items/demo.yml
@@ -1,6 +1,6 @@
 - name: demonstrate loop with dictitems/dictsort
   hosts: localhost
-  gather_facts: no
+  gather_facts: false
 
   vars:
     users:
