--- a/range/demo.yml
+++ b/range/demo.yml
@@ -1,6 +1,6 @@
 - name: demonstrate loop with range
   hosts: localhost
-  gather_facts: no
+  gather_facts: false
 
   tasks:
     - name: with_sequence
